# adcp-recorder

./: .coverage  .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  PYPI_TODO.md  README.md  coverage.xml  debug_amplitude.py  debug_wave_join.py  pyproject.toml  task.md  task.txt
.devcontainer/: Dockerfile  devcontainer.json
.github/: dependabot.yml
.github/workflows/: README.md  build.yml  code-quality.yml  publish.yml  tests.yml
.streamlit/: config.toml
adcp_recorder/: __init__.py  config.py
adcp_recorder.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
adcp_recorder/api/: main.py
adcp_recorder/cli/: main.py
adcp_recorder/core/: __init__.py  enums.py  nmea.py  recorder.py
adcp_recorder/db/: __init__.py  db.py  migration.py  models.py  operations.py  schema.py
adcp_recorder/export/: binary_writer.py  bulk_export.py  file_writer.py  parquet_writer.py
adcp_recorder/parsers/: __init__.py  pnora.py  pnorb.py  pnorc.py  pnore.py  pnorf.py  pnorh.py  pnori.py  pnors.py  pnorw.py  pnorwd.py  utils.py
adcp_recorder/serial/: __init__.py  binary_chunk.py  consumer.py  port_manager.py  producer.py  test_blob_and_queue.py
adcp_recorder/service/: supervisor.py  win_service.py
adcp_recorder/templates/linux/: adcp-recorder.service
adcp_recorder/templates/windows/: install-service-windows.ps1  install_service.bat
adcp_recorder/tests/: conftest.py  test_cli.py  test_cli_service.py  test_compliance_100.py  test_config.py  test_e2e.py  test_final_coverage.py  test_final_coverage_migrated.duckdb  test_performance.py  test_recorder_integration.py
adcp_recorder/tests/core/: test_core_coverage.py  test_enums.py  test_nmea.py
adcp_recorder/tests/db/: __init__.py  test_db.py  test_full_persistence.py  test_migration.py  test_migration_cli.py  test_models.py  test_operations.py  test_operations_extra.py  test_query_filters.py
adcp_recorder/tests/export/: test_export_coverage.py  test_file_writer.py  test_parquet_writer_extended.py
adcp_recorder/tests/parsers/: __init__.py  test_parsers_coverage.py  test_pnora.py  test_pnorb.py  test_pnorc.py  test_pnore.py  test_pnorf.py  test_pnorh.py  test_pnori.py  test_pnors.py  test_pnorw.py  test_pnorwd.py  test_utils.py
adcp_recorder/tests/serial/: __init__.py  (+9 more)
adcp_recorder/ui/: config.py  dashboard.py  data_layer.py  parquet_data_layer.py
background/: REQUIREMENTS.md  TELEMETRY_SPEC.md
debug_data/: adcp.duckdb
debug_home/.adcp-recorder/: config.json
docs/: README.md
docs/architecture/: binary-detection.md  duckdb-integration.md  overview.md  serial-processing.md
docs/deployment/: ANALYSIS_DEPLOY.md  DEPLOYMENT.md  PYPI_UPLOAD.md
docs/examples/: README.md
docs/implementation/: README.md
docs/nmea/: checksum.md  overview.md  validation.md
docs/quality-reports/: duckdb-backend-walkthrough-2026-01-10.md  nmea-spec-audit-log.md  phase2-pnori-walkthrough-2026-01-10.md  phase4_persistence.md  phase5_cli_control.md  phase6_service.md  phase7_integration.md  phase8-report.md  qa-report-2026-01-10.md  ruff_quality_report_20260113.md
docs/specs/: README.md
docs/user-guide/: ANALYSIS.md  CONFIGURATION.md  EXAMPLES.md  INSTALL.md  USAGE.md
quality-reports/: alignment-protocol-log.md  parser-spec-discrepancies.md  parser-spec-tracksheet.md
scripts/: build.sh  check_parser_spec_alignment.py  fix-windows-service.bat  install-analysis-windows.bat  install-linux.sh  install-windows.bat  test-pywin32.bat  uninstall-linux.sh  uninstall-windows.bat
utils/: README.md  debug_wave_alignment.py  reproduce_issue.py  verify_true_final_structure.py
(+163 files in other folders)
