[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "adcp-recorder"
version = "0.1.0"
description = "NMEA telemetry recorder for Nortek ADCP instruments with DuckDB backend"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
dependencies = [
    "pyserial>=3.5",
    "duckdb>=0.9.0",
    "click>=8.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.11.0",
]
win = [
    "pywin32>=306; sys_platform == 'win32'",
]

[project.scripts]
adcp-recorder = "adcp_recorder.cli.main:cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["adcp_recorder*"]

[tool.pytest.ini_options]
testpaths = ["adcp_recorder/tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --strict-markers"

[tool.coverage.run]
source = ["adcp_recorder"]
omit = ["adcp_recorder/tests/*"]
