[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "adcp-recorder"
version = "0.1.0"
description = "NMEA telemetry recorder for Nortek ADCP instruments with DuckDB backend"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.13"
authors = [
    {name = "V P", email = "vp@avp-systeme.de"},
]
maintainers = [
    {name = "V P", email = "vp@avp-systeme.de"},
]
keywords = [
    "adcp",
    "nmea",
    "telemetry",
    "oceanography",
    "marine",
    "data-acquisition",
    "nortek",
    "duckdb",
    "serial",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Oceanography",
    "Topic :: System :: Monitoring",
    "Topic :: Database",
]

dependencies = [
    "pyserial>=3.5",
    "duckdb>=0.9.0",
    "click>=8.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.11.0",
    "ruff>=0.1.0",
]
win = [
    "pywin32>=306; sys_platform == 'win32'",
]

[project.urls]
Homepage = "https://github.com/vpatrinica/adcp-recorder"
Documentation = "https://github.com/vpatrinica/adcp-recorder/tree/main/docs"
Repository = "https://github.com/vpatrinica/adcp-recorder"
Issues = "https://github.com/vpatrinica/adcp-recorder/issues"
Changelog = "https://github.com/vpatrinica/adcp-recorder/blob/main/CHANGELOG.md"

[project.scripts]
adcp-recorder = "adcp_recorder.cli.main:cli"

[tool.setuptools]
zip-safe = false

[tool.setuptools.packages.find]
where = ["."]
include = ["adcp_recorder*"]
exclude = ["adcp_recorder.tests*"]

[tool.setuptools.package-data]
adcp_recorder = [
    "templates/linux/*.service",
    "templates/windows/*.ps1",
]

[tool.pytest.ini_options]
testpaths = ["adcp_recorder/tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --strict-markers"

[tool.coverage.run]
source = ["adcp_recorder"]
omit = ["adcp_recorder/tests/*"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP"]
ignore = []
